--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "uuid": "^8.3.2"
